--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
   "homepage": "https://github.com/mickelindahl/ftpplus#readme",
   "dependencies": {
     "async": "^2.0.0",
+    "bluebird": "^3.4.6",
+    "debug": "^2.2.0",
     "dotenv": "^2.0.0",
-    "jsftp": "^1.5.3"
+    "jsftp": "^1.5.3",
+    "parse": "git+ssh://git@github.com/mickelindahl/parse.git"
   },
   "devDependencies": {
     "code": "^3.0.1",
