--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Extends jsftp used fetch multiple file content from a remote directory",
   "main": "index.js",
   "scripts": {
-    "test": "lab"
+    "test": "lab",
+    "test-cov-html": "./node_modules/.bin/lab -m 30000 -l -r html -o coverage.html  test/index.js"
   },
   "repository": {
     "type": "git",
@@ -23,13 +24,15 @@
   "homepage": "https://github.com/mickelindahl/ftpplus#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
-    "debug": "^2.2.0",
+    "debug": "^2.3.3",
     "dotenv": "^2.0.0",
-    "jsftp": "^1.5.3",
+    "jsftp": "^1.5.5",
     "parse": "git+ssh://git@github.com/mickelindahl/parse.git"
   },
   "devDependencies": {
-    "code": "^3.0.1",
-    "lab": "^10.9.0"
+    "code": "^4.0.0",
+    "lab": "^11.2.1",
+    "mock-require": "^2.0.0",
+    "xml2js": "^0.4.17"
   }
 }
