--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "debug": "^2.3.3",
     "dotenv": "^2.0.0",
     "jsftp": "^1.5.5",
-    "parse": "git+ssh://git@github.com/mickelindahl/parse.git"
+    "parse": "git+ssh://git@github.com/mickelindahl/parse.git",
+    "sftpjs": "^1.3.4"
   },
   "devDependencies": {
     "code": "^4.0.0",
