--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ftpplus",
+  "name": "text-file-import",
   "version": "0.1.0",
   "description": "Extends jsftp used fetch multiple file content from a remote directory",
   "main": "index.js",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/mickelindahl/ftpplus.git"
+    "url": "git+ssh://git@github.com/mickelindahl/text_file_import.git"
   },
   "keywords": [
     "ftp",
@@ -19,9 +19,9 @@
   "author": "Mikael Lindahl",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/mickelindahl/ftpplus/issues"
+    "url": "https://github.com/mickelindahl/text_file_import/issues"
   },
-  "homepage": "https://github.com/mickelindahl/ftpplus#readme",
+  "homepage": "https://github.com/mickelindahl/text_file_import#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
     "debug": "^2.3.3",
