--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "lab",
     "test-cov-html": "./node_modules/.bin/lab -m 30000 -l -r html -o coverage.html  test/index.js",
-    "jsdoc-to-markdown":"jsdoc2md --template README.hbs --files index.js > README.md"
+    "jsdoc-to-markdown": "jsdoc2md --template README.hbs --files index.js > README.md"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "debug": "^2.3.3",
+    "moment": "^2.17.1",
     "sftpjs": "^1.3.4"
   },
   "devDependencies": {
