--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Extends jsftp used fetch multiple file content from a remote directory",
   "main": "index.js",
   "scripts": {
-    "test": "lab",
+    "test": "./node_modules/.bin/lab -m 30000 -l  test/index.js",
     "test-cov-html": "./node_modules/.bin/lab -m 30000 -l -r html -o coverage.html  test/index.js",
     "jsdoc-to-markdown": "jsdoc2md --template README.hbs --files index.js > README.md"
   },
