--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/lab -r lcov test/index.js | ./node_modules/.bin/coveralls",
+    "test-lcov": "node_modules/.bin/lab -r lcov test/index.js",
     "test-local": "./node_modules/.bin/lab -m 30000 -l  test/index.js",
     "test-cov-html": "./node_modules/.bin/lab -m 30000 -l -r html -o coverage.html  test/index.js",
     "jsdoc-to-markdown": "jsdoc2md --template README.hbs --files index.js > README.md"
